@@ -30,18 +30,19 @@ ramp: 1D float ndarray                                              \n\
 
 
 static PyObject *gauss2D(PyObject *self, PyObject *args){
-    PyArrayObject
-        *array, *params;
-    double background, r0, r1;
+    PyArrayObject *array;
+    double
+        height=0.0,
+        background=0.0,
+        x0, y0, x_sigma, y_sigma;
     int i, j, ny, nx;
     npy_intp dims[2];
 
-    if (!PyArg_ParseTuple(args, "iiO", &ny, &nx, &params))
+    if (!PyArg_ParseTuple(
+            args,
+            "iidddd",
+            &ny, &nx, &y0, &x0, &y_sigma, &x_sigma))
         return NULL;
-
-    background = INDd(params,0);
-    r1 = INDd(params,1);
-    r0 = INDd(params,2);
 
     dims[0] = ny;
     dims[1] = nx;
@@ -51,7 +52,7 @@ static PyObject *gauss2D(PyObject *self, PyObject *args){
         for(i=0; i<nx; i++)
             IND2d(array,j,i) =
                 background
-                + exp(-0.5 * pow(i*1.0, 2.0) + r0);
+                + exp(-0.5 * pow((j-y0)/y_sigma, 2.0));
 
     return Py_BuildValue("N", array);
 }
@@ -63,7 +64,7 @@ PyDoc_STRVAR(
     "2D Gaussian function.");
 
 
-static PyMethodDef gauss_methods[] = {
+static PyMethodDef gauss_mod_methods[] = {
     {"gauss2D", gauss2D, METH_VARARGS, gauss2D__doc__},
     {NULL, NULL, 0, NULL}
 };
@@ -75,7 +76,7 @@ static struct PyModuleDef moduledef = {
     "_gauss",
     gauss_mod__doc__,
     -1,
-    gauss_methods
+    gauss_mod_methods
 };
 
 /* When Python 3 imports a C module named 'X' it loads the module           */
